@@ -91,7 +91,7 @@ border-radius: 7px;
 position: absolute;
 background: #606060;
 color: #FFFFFF;
-line-height: 19px;
+line-height: 20px;
 right: 6px;
 text-align: center;
 top: 6px;
